--- a/buildSrc/src/CommonAndroid.gradle
+++ b/buildSrc/src/CommonAndroid.gradle
@@ -34,10 +34,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8.toString()
+        jvmTarget = '1.8'
     }
+
 
     buildTypes {
         debug {
