--- a/parrotbot/build.gradle
+++ b/parrotbot/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply from: "$rootDir/buildSrc/src/CommonAndroid.gradle"
+apply plugin: 'kotlin-android'
 
 android {
     defaultConfig {
@@ -12,4 +13,10 @@ dependencies {
 
     implementation project(":commonui")
     implementation project(":core")
+    implementation project(":chat")
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
 }
