--- a/parrotbot/src/main/AndroidManifest.xml
+++ b/parrotbot/src/main/AndroidManifest.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.parrotbot">
+    package="com.parrotbot" >
 
     <application
         android:name=".ParrotBot"
+        android:icon="@drawable/ic_parrot"
         android:label="@string/app_name"
+        android:roundIcon="@drawable/ic_parrot"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
-        <activity android:name=".start.StartActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".start.StartActivity"
             android:exported="true"
-            tools:ignore="LockedOrientationActivity">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
+            android:theme="@style/AppTheme"
+            tools:ignore="LockedOrientationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
