Added service, workmanager and notifications

--- a/parrotbot/build.gradle
+++ b/parrotbot/build.gradle
@@ -15,4 +15,9 @@ dependencies {
     implementation project(":core")
     implementation project(":chat")
     implementation project(":chatlib")
+    implementation project(":parrotbotlib")
+    implementation project(":applicationstatelib")
+
+    implementation WorkManager.workManager
+    implementation AndroidX.processLifecycle
 }
