--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,5 @@ include ':coreui'
 include ':commonui'
 include ':chat'
 include ':chatlib'
+include ':parrotbotlib'
+include ':applicationstatelib'
