--- a/parrotbot/src/main/AndroidManifest.xml
+++ b/parrotbot/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".start.StartActivity"
+            android:name=".activity.ParrotBotActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"
@@ -23,6 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".parrotbotlib.service.ParrotBotService"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.parrotbot.parrotbotlib.service.ParrotBotService"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
